[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/gui/arrowPressed.png" type="Texture" id=1]
[ext_resource path="res://textures/gui/arrow.png" type="Texture" id=2]
[ext_resource path="res://scripts/MobileControls.gd" type="Script" id=3]
[ext_resource path="res://textures/gui/pauseButton.png" type="Texture" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="hider" type="Node2D" parent="."]

[node name="left" type="TouchScreenButton" parent="hider"]
position = Vector2( 40.9384, 600.714 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )

[node name="right" type="TouchScreenButton" parent="hider"]
position = Vector2( 600, 856.792 )
rotation = 3.14159
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )

[node name="jump" type="TouchScreenButton" parent="hider"]
position = Vector2( 1550, 600 )
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )

[node name="Pause" type="TouchScreenButton" parent="hider"]
position = Vector2( 1331.16, 14.2726 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 4 )

[connection signal="pressed" from="hider/left" to="." method="_on_left_pressed"]
[connection signal="released" from="hider/left" to="." method="_on_left_released"]
[connection signal="pressed" from="hider/right" to="." method="_on_right_pressed"]
[connection signal="released" from="hider/right" to="." method="_on_right_released"]
[connection signal="pressed" from="hider/jump" to="." method="_on_jump_pressed"]
[connection signal="released" from="hider/jump" to="." method="_on_jump_released"]
[connection signal="pressed" from="hider/Pause" to="." method="_on_Pause_pressed"]
